# tf-notify

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  foo.py  mkdocs.yml  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
docs/: api.md  contributing.md  documentation.md  index.md  installation.md  license.md  requirements.txt
tests/callbacks/: test_email.py  test_slack.py  test_telegram.py
tf_notify/: __init__.py
tf_notify/callbacks/: base.py  email.py  slack.py  telegram.py
tfnotify/callbacks/: slack.py
